Fix laggy animations and overflow

--- a/src/components/AnimatedLogo/AnimatedLogo.style.scss
+++ b/src/components/AnimatedLogo/AnimatedLogo.style.scss
@@ -9,6 +9,5 @@
   font-size: 6rem;
   text-align: center;
   color: #fff;
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #f000ff,
-    0 0 82px #f000ff, 0 0 92px #f000ff, 0 0 102px #f000ff, 0 0 151px #f000ff;
+  text-shadow: 0 0 20px #f000ff, 0 0 4px #fff, 0 0 21px #f000ff;
 }
