--- a/src/components/FindMeOn/FindMeOn.style.scss
+++ b/src/components/FindMeOn/FindMeOn.style.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  padding: 50px;
 
   .icon-box {
     &:hover {
