--- a/src/pages/HomePage/HomePage.style.scss
+++ b/src/pages/HomePage/HomePage.style.scss
@@ -1,6 +1,7 @@
 .container {
-  width: 80%;
+  width: 90vw;
   .content-container {
-    overflow: scroll;
+    overflow-y: scroll;
+    height: 98vh;
   }
 }
